[package]
name = "pointproof"
authors = [ "zhenfei <zhenfei.zhang@hotmail.com>" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }

ark-bls12-377 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }

rayon = { version = "1.5.1", default-features = false }

bencher = "0.1.5"
criterion = "0.3.4"

rand_chacha = "0.3.0"

[[bench]]
name = "bench"
harness = false

[features]
parallel = [ "ark-ec/parallel" ]